refactor: 重构项目结构，更新技术栈为 Java 1.8 + Spring Boot 2.7.18
主要变更:
- 重命名: com.lzlj.store -> com.lzlj.account, store-cloud -> account-cloud
- 模块重组: 创建 account-biz 聚合模块，business服务移入
  - account-biz/account-user (用户服务)
  - account-biz/account-goods (商品服务)
- 技术栈降级适配 Java 1.8:
  - Spring Boot 3.1.6 -> 2.7.18
  - Spring Cloud 2022.0.5 -> 2021.0.9
  - Spring Cloud Alibaba 2022.0.0.2 -> 2021.0.5.0
  - 修复 Jakarta EE -> Java EE API (jakarta.* -> javax.*)
  - 移除 Java 9+ 特性: record, text blocks, var, Map.of()
  - JJWT API 适配: subject() -> setSubject()
- 新增依赖: XXL-Job 2.4.0, Aliyun OSS 3.17.4
- 组件兼容性修复: druid-starter, springdoc-openapi-ui

Constraint: 需确保 Nacos/Seata 等中间件版本与 Spring Cloud 2021.x 兼容